@@ -23,7 +23,7 @@ subprojects {
         options.encoding = Charsets.UTF_8.name()
         options.release = 25
         options.isFork = true
-        options.compilerArgs.addAll(listOf("-Xlint:-deprecation", "-Xlint:-removal"))
+        options.compilerArgs.addAll(listOf("-Xlint:-deprecation", "-Xlint:-removal", "--enable-preview", "--add-modules=jdk.incubator.vector"))
     }
     tasks.withType<Javadoc>().configureEach {
         options.encoding = Charsets.UTF_8.name()
@@ -32,6 +32,7 @@ subprojects {
         filteringCharset = Charsets.UTF_8.name()
     }
     tasks.withType<Test>().configureEach {
+        jvmArgs("--enable-preview", "--add-modules=jdk.incubator.vector")
         testLogging {
             showStackTraces = true
             exceptionFormat = TestExceptionFormat.FULL
